--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,76 +1,41 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: 'Quicksand';
+  line-height: 1.5;
+  font-weight: 400;
+  font-size: 16px;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  /* Color palettes 
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  What these are used for:
+  --primary-color: Primary background color
+  --secondary-color: Secondary background color
+  --ternary-color: Tertiary background color
+  --quarternary-color: Accent background color
+  --quinary-color: Titles color
+  --senary-color: Links color 
+  --septenary-color: Accent text color*/
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --light-primary: #1128D9;
+  --light-secondary: #0b2994;
+  --light-ternary: #3560C4;
+  --light-quarternary: #0D2354;
+  --light-quinary: #BCF4DA;
+  --light-senary: #49D3AF;
+  --light-septenary: #E57822;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --dark-primary: #081530;
+  --dark-secondary: #0F2B3B;
+  --dark-ternary: #1E3957;
+  --dark-quarternary: #061026;
+  --dark-quinary: #2C3E31;
+  --dark-senary: #164A3B;
+  --dark-septenary: #A55C1F;
 }
 
 * {
@@ -83,25 +48,26 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-a {
-  color: inherit;
+body {
+  --primary-color: var(--light-primary);
+  --secondary-color: var(--light-secondary);
+  --ternary-color: var(--light-ternary);
+  --quarternary-color: var(--light-quarternary);
+  --quinary-color: var(--light-quinary);
+  --senary-color: var(--light-senary);
+  background: linear-gradient(128deg, var(--secondary-color) 0%, var(--primary-color) 33%, var(--quarternary-color) 83%);
+}
+
+a, a:hover, a:active, a:visited {
+  color: var(--senary-color);
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
