income in green and expense in red

--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -16,10 +16,10 @@
     border-radius: 7px;
     text-align: center;
 }
-.green_cell {
+.income {
     background-color: green;
 }
 
-.red_cell {
+.expense {
     background-color: red;
 }
