the dropdown menu works correctly, with animations

--- a/src/components/forms/formscomponents/SelectInput.module.css
+++ b/src/components/forms/formscomponents/SelectInput.module.css
@@ -1,3 +1,12 @@
+.select_container {
+    width: 100%;
+    max-width: 250px;
+}
+
+.select_container:hover {
+    cursor: pointer;
+}
+
 .select_label {
     font-weight: bold;
 }
@@ -5,13 +14,14 @@
 .select_box {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: white;
     padding: 1px 10px;
     border-radius: 3px;
     gap: 10px;
     transition: outline .1s;
+    width: 100%;
 }
 
 .open {
@@ -35,7 +45,6 @@
 }
 
 .selection_box {
-    /* align-self: self-end; */
     right: 0px;
     display: flex;
     flex-direction: column;
@@ -43,7 +52,6 @@
     align-items: center;
     position: absolute;
     background-color: white;
-    padding: 5px 10px;
     box-shadow: 0 4px 8px #a9a9a966, 0 6px 20px #a9a9a959;
     animation-name: fade_slide_in;
     animation-duration: .35s;
@@ -51,11 +59,28 @@
     animation-timing-function: ease;
 }
 
+.selection_box_option {
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.selection_box_option:hover {
+    background-color: var(--quinary-color);
+}
+
 .closing {
     animation-name: fade_slide_out;
     animation-duration: .35s;
     animation-fill-mode: backwards;
     animation-timing-function: ease;
+}
+
+.hidden {
+    height: 0;
+    width: 0;
+    position: fixed;
+    left: -500px;
 }
 
 @keyframes fade_slide_in {
