--- a/src/components/forms/NewTransactionForm.module.css
+++ b/src/components/forms/NewTransactionForm.module.css
@@ -20,9 +20,24 @@
     gap: 20px;
 }
 
+.date_input {
+    padding: 3px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    width: 100%;
+    transition: outline .1s;
+    font-size: 1rem;
+}
+
+.date_input:focus {
+    outline: 3px solid var(--senary-color);
+}
+
 .recurring_frequency {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 10px;
 }
+
