--- a/src/components/forms/formscomponents/SubmitButton.module.css
+++ b/src/components/forms/formscomponents/SubmitButton.module.css
@@ -2,7 +2,7 @@
     padding: 10px;
     width: fit-content;
     color: var(--senary-color);
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.7);
     border: 1px solid var(--senary-color);
     border-radius: 0.25rem;
     transition: color .25s, background-color .25s, border .25s;
