adjusted the colors used

--- a/src/app/(loggedin)/dashboard/addtransaction/AddTransaction.module.css
+++ b/src/app/(loggedin)/dashboard/addtransaction/AddTransaction.module.css
@@ -1,5 +1,5 @@
 .new_transaction_section {
-    background-color: rgb(68,81,201, 0.6);
+    background-color: var(--quarternary-color);
     padding: 15px 25px;
     border-radius: 15px;
 }
