--- a/src/components/forms/formscomponents/SelectInput.module.css
+++ b/src/components/forms/formscomponents/SelectInput.module.css
@@ -66,7 +66,7 @@
 }
 
 .selection_box_option:hover {
-    background-color: var(--quinary-color);
+    background-color: var(--quarternary-color);
 }
 
 .closing {
