--- a/src/components/baselayout/NotLoggedInHeader.module.css
+++ b/src/components/baselayout/NotLoggedInHeader.module.css
@@ -21,6 +21,6 @@
     gap: 10px;
     padding: 10px 20px;
     /* background-color: rgba(68, 81, 201, 0.5); */
-    background-color: var(--ternary-color);
+    background-color: var(--quarternary-color);
     border-radius: 25px;
 }
