--- a/src/components/forms/formscomponents/SubmitButton.module.css
+++ b/src/components/forms/formscomponents/SubmitButton.module.css
@@ -7,6 +7,7 @@
     border-radius: 0.25rem;
     transition: color .25s, background-color .25s, border .25s;
     font-family: 'Quicksand';
+    font-weight: bold;
 }
 
 .button:hover {
