--- a/src/components/forms/NewTransactionForm.module.css
+++ b/src/components/forms/NewTransactionForm.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+    align-items: center;
 }
 
 .main_infos {
@@ -56,6 +57,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.recurring_checkbox {
+    align-self: center;
 }
 
 .recurring_frequency {
