modified the way I filter the transactions. I simply add a hidden class to the rows concerned, this way the running balance remains correct

--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -78,3 +78,7 @@ tr:hover > .balance_cell > .options {
     justify-content: space-around;
     align-items: center;
 }
+
+.hidden {
+    display: none;
+}
