created modal and row components.

--- a/src/components/table/Row.module.css
+++ b/src/components/table/Row.module.css
@@ -1,15 +1,5 @@
-.table {
-    border-spacing: 7px;
-    color: var(--light-quinary);
-}
-
 .today {
     font-weight: bold;
-}
-
-.header_cell {
-    background-color: rgb(68,81,201, 0.8);
-    color: var(--primary-color);
 }
 
 .content_cell {
@@ -54,6 +44,10 @@
 
 .options > span:hover {
     cursor: pointer;
+}
+
+.options > span > svg {
+    fill: var(--primary-color);
 }
 
 .options > span > svg {
