created components for pencil and garbage, need to finish them

--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -29,6 +29,7 @@
     animation-fill-mode: backwards;
     animation-timing-function: ease;
     overflow: hidden;
+    padding: 40px;
 }
 
 .modal_cross{
