added the garbage bin, and styles the modal content. need to add the edit page and delete functionnality, and maybe transaction details to the modal content

--- a/src/components/table/Row.module.css
+++ b/src/components/table/Row.module.css
@@ -76,3 +76,19 @@ tr:hover > .balance_cell > .options {
 .hidden {
     display: none;
 }
+
+/* Modal */
+
+.modal_content {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    color: var(--quinary-color);
+}
+
+.modal_buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
