--- a/src/components/CategoriesBox.module.css
+++ b/src/components/CategoriesBox.module.css
@@ -1,5 +1,5 @@
 .categories_box {
-    background-color: var(--quarternary-color);
+    /* background-color: var(--quarternary-color); */
     padding: 15px 25px;
     border-radius: 15px;
     display: flex;
