--- a/src/components/baselayout/LoggedInHeader.module.css
+++ b/src/components/baselayout/LoggedInHeader.module.css
@@ -1,11 +1,16 @@
 .header {
+    box-sizing: border-box;
     position: fixed;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     padding: 15px 50px;
+    background-color: var(--primary-color);
+    border-bottom: 1px solid var(--quarternary-color);
+    z-index: 999;
+    height: 100px;
 }
 
 .header_logo {
@@ -14,13 +19,12 @@
 }
 
 .header_nav {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    gap: 10px;
+    justify-content: center;
+    gap: 50px;
     padding: 10px 20px;
-    /* background-color: rgba(68, 81, 201, 0.5); */
-    background-color: var(--quarternary-color);
     border-radius: 25px;
 }
