--- a/src/components/CategoryItem.module.css
+++ b/src/components/CategoryItem.module.css
@@ -4,9 +4,10 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    background-color: var(--ternary-color);
+    /* background-color: var(--ternary-color); */
     padding: 10px;
-    border-radius: 4px;
+    /* border-radius: 4px; */
+    border-bottom: 1px solid var(--ternary-color);
 }
 
 .category_edit_form {
