--- a/src/components/Collapse.module.css
+++ b/src/components/Collapse.module.css
@@ -1,6 +1,6 @@
 .collapse {
     /* max-width: 300px; */
-    width: fit-content;
+    width: 100%;
 }
 
 /* Header */
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 15px;
-    background-color: var(--senary-color);
+    /* background-color: var(--senary-color); */
     padding: 5px 10px;
     border-radius: 5px;
     transition: border-radius .3s ease;
@@ -50,9 +50,9 @@
 /* Content */
 
 .collapse_content {
-    background-color: var(--quarternary-color);
+    background-color: var(--secondary-color);
     padding: 10px;
-    border-radius: 0 0 5px 5px;
+    /* border-radius: 0 0 5px 5px; */
 }
 
 .opening {
