--- a/src/components/forms/NewCategoryForm.module.css
+++ b/src/components/forms/NewCategoryForm.module.css
@@ -4,4 +4,7 @@
     align-items: flex-end;
     justify-content: space-between;
     gap: 10px;
+    background-color: var(--secondary-color);
+    width: 100%;
+    padding: 15px;
 }
