modified some colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,8 @@ body {
   --septenary-color: var(--light-septenary);
   --red: rgb(255, 86, 86);
   --green: rgb(117, 177, 117);
-  background: linear-gradient(128deg, var(--secondary-color) 0%, var(--primary-color) 33%, var(--quarternary-color) 83%);
+  /* background: linear-gradient(128deg, var(--secondary-color) 0%, var(--primary-color) 33%, var(--quarternary-color) 83%); */
+  background-color: rgba(0, 0, 0, 0.04);
 }
 
 a, a:hover, a:active, a:visited {
