--- a/src/components/table/Table.module.css
+++ b/src/components/table/Table.module.css
@@ -1,11 +1,13 @@
 .table {
-    border-spacing: 7px;
+    border-spacing: 0px;
     color: var(--light-quinary);
+    background-color: var(--primary-color);
+    border: 1px solid var(--ternary-color);
 }
 
 .header_cell {
-    background-color: rgb(68,81,201, 0.8);
-    color: var(--primary-color);
+    /* background-color: rgb(68,81,201, 0.8); */
+    color: var(--quinary-color);
 }
 
 .cell {
