--- a/src/components/AccountPreview.module.css
+++ b/src/components/AccountPreview.module.css
@@ -1,13 +1,12 @@
 .account_preview {
     background-color: var(--primary-color);
-    border: 1px solid var(--senary-color);
-    padding: 15px 25px;
-    border-radius: 15px;
+    border: 1px solid var(--ternary-color);
+    border-radius: 4px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
     gap: 10px;
-    color: var(--senary-color);
 }
 
 .account_preview_header {
@@ -16,7 +15,9 @@
     align-items: center;
     justify-content: space-between;
     gap: 40px;
-    border-bottom: 1px dashed var(--senary-color);
+    background-color: var(--secondary-color);
+    border-bottom: 1px dashed var(--ternary-color);
+    padding: 15px;
 }
 
 .account_preview_title {
@@ -33,33 +34,31 @@
     color: var(--quinary-color);
 }
 
+.account_preview_last_transaction {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.account_preview_last_transaction  > p {
+    padding-left: 15px;
+}
+
 .account_preview_last_transactions_details {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.account_preview_last_transaction {
-    display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
-}
-
-.income, .expense {
-    padding: 5px 10px;
-    border-radius: 5px;
+    background-color: var(--secondary-color);
+    padding: 15px;
 }
 
 .income {
-    background-color: var(--green);
-    color: var(--quinary-color);
+    color: var(--green);
+    /* color: var(--quinary-color); */
 }
 
 .expense {
-    background-color: var(--red);
-    color: var(--quinary-color);
-    filter: saturate(80%) brightness(90%);
+    color: var(--red);
+    /* filter: saturate(80%) brightness(90%); */
 }
