--- a/src/components/sections/AccountsSection.module.css
+++ b/src/components/sections/AccountsSection.module.css
@@ -1,13 +1,35 @@
+.accounts_page_section {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    height: calc(100vh - 100px);
+}
+
+.categories_section {
+    background-color: var(--primary-color);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 17px;
+    padding-top: 17px;
+    border-right: 1px solid var(--ternary-color);
+}
+
 .accounts_section {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    gap: 15px;
+    justify-content: flex-start;
+    padding: 50px;
 }
 
 .accounts_section_gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 15px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--ternary-color);
+    padding: 15px;
 }
