set up the GET settings route, and started the page and its components. Need to create the PATCH/PUT route and make the forms update the settings

--- a/src/components/forms/formscomponents/TextInput.module.css
+++ b/src/components/forms/formscomponents/TextInput.module.css
@@ -13,6 +13,7 @@
     border-radius: 3px;
     border: none;
     transition: outline .1s;
+    outline: 1px solid var(--ternary-color);
 }
 
 .textinput_field:focus {
