modified the css on the signIn section of the settings

--- a/src/components/SettingsItem.module.css
+++ b/src/components/SettingsItem.module.css
@@ -1,3 +1,15 @@
+.settings_item_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
 .settings_item {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 25px;
+    width: 100%;
 }
