--- a/src/components/SettingsItem.module.css
+++ b/src/components/SettingsItem.module.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     gap: 25px;
     width: 100%;
 }
