--- a/src/app/(loggedin)/dashboard/settings/Settings.module.css
+++ b/src/app/(loggedin)/dashboard/settings/Settings.module.css
@@ -2,4 +2,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    justify-self: center;
+}
+
+.settings_sections {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-self: center;
+    width: fit-content;
+    gap: 30px;
 }
