--- a/src/components/sections/SettingsGoalSection.module.css
+++ b/src/components/sections/SettingsGoalSection.module.css
@@ -1,4 +1,4 @@
-.settings_signin_section {
+.settings_goal_section {
     background-color: var(--primary-color);
     border: 1px solid var(--ternary-color);
     width: fit-content;
@@ -8,9 +8,10 @@
     align-items: flex-start;
     justify-content: center;
     gap: 25px;
+    width: 100%;
 }
 
-.settings_signin_items {
+.settings_goal_items {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
