--- a/src/components/sections/SettingsSignInSection.module.css
+++ b/src/components/sections/SettingsSignInSection.module.css
@@ -1,7 +1,7 @@
 .settings_signin_section {
     background-color: var(--primary-color);
     border: 1px solid var(--ternary-color);
-    width: fit-content;
+    width: 100%;
     padding: 25px;
     display: flex;
     flex-direction: column;
