fixed the css of the forms and buttons

--- a/src/components/SettingsItem.module.css
+++ b/src/components/SettingsItem.module.css
@@ -13,3 +13,19 @@
     gap: 400px;
     width: 100%;
 }
+
+.settings_item_update_form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 25px;
+}
