--- a/src/app/(loggedin)/dashboard/Dashboard.module.css
+++ b/src/app/(loggedin)/dashboard/Dashboard.module.css
@@ -12,4 +12,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 1024px) {
+
+    .dashboard_graphs {
+        flex-direction: column;
+    }
 }
