fixed the css to start making it responsive

--- a/src/app/(loggedin)/dashboard/Dashboard.module.css
+++ b/src/app/(loggedin)/dashboard/Dashboard.module.css
@@ -10,6 +10,7 @@
 .dashboard_graphs {
     height: 100%;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
