--- a/src/components/charts/SankeyChart.module.css
+++ b/src/components/charts/SankeyChart.module.css
@@ -1,5 +1,23 @@
 .container {
-    width: 60%;
+    width: 55%;
+    background-color: var(--primary-color);
+    border: 1px solid var(--ternary-color);
+}
+
+.title {
+    text-align: center;
+}
+
+.responsive_container {
+    height: 350px;
+}
+
+.text_header {
+    font-size: 14px;
+}
+
+.text_content {
+    font-size: 12px;
 }
 
 @media (max-width: 1024px) {
@@ -8,3 +26,18 @@
         width: 100%;
     }
 }
+
+/* Mobile */
+
+@media (max-width: 425px) {
+
+    .text_header {
+        font-size: 11px;
+    }
+
+    .text_content {
+        font-size: 9px;
+
+    }
+}
+
