--- a/src/components/HeroSection.module.css
+++ b/src/components/HeroSection.module.css
@@ -1,6 +1,6 @@
 .hero_section {
-    background-color: rgba(68, 81, 201, 0.5);
-    border-radius: 25px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--ternary-color);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
