fixed the styles of the form and the section, to better fit in the esthetic

--- a/src/app/(loggedin)/dashboard/transactions/edit/[id]/UpdateTransaction.module.css
+++ b/src/app/(loggedin)/dashboard/transactions/edit/[id]/UpdateTransaction.module.css
@@ -1,5 +1,6 @@
 .update_transaction_section {
-    background-color: var(--quarternary-color);
-    padding: 15px 25px;
-    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
