--- a/src/components/SpaceshipAndMoon.module.css
+++ b/src/components/SpaceshipAndMoon.module.css
@@ -1,5 +1,5 @@
 .spaceship_and_moon {
-    height: calc(100vh - 100px);
+    height: calc(100vh - var(--header-height));
     position: relative;
     display: flex;
     flex-direction: column;
