--- a/src/app/(loggedin)/dashboard/transactions/Transactions.module.css
+++ b/src/app/(loggedin)/dashboard/transactions/Transactions.module.css
@@ -1,6 +1,6 @@
 .transactions_layout {
     width: 100%;
-    height: calc(100vh - 100px);
+    height: calc(100vh - var(--header-height));
     display: grid;
     grid-template-columns: 20% 60% 20%;
 }
